--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright notice
 -->
 <head>
-	<title>Some title</title>
+	<title>Some other title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content.
-			Just some modified content
+			Just some text
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; some company 2014</p>
 	</footer>
 </body>
 </html>
