--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright notice
 -->
 <head>
-	<title>Some title</title>
+	<title>Some title? dont know</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,12 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content.
-			Just some modified content
+			something else
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; My Company 2017</p>
 	</footer>
 </body>
 </html>
