mb conflicting brewing

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright notice
-	adding changes before rebasing conflicts
+	Some changes in master
 -->
 <head>
 	<title>Some title</title>
@@ -19,7 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content.
-			Just some modified content
+			Just some master content
 		</p>
 	</main>
 	<footer class="container">
