--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; My Company 2017</p>
+		<p>&copy; My Company 2017, all rights reserved</p>
 	</footer>
 </body>
 </html>
